--- a/UI/package.json
+++ b/UI/package.json
@@ -16,6 +16,7 @@
         "@uirouter/core": "6.1.0",
         "angular": "1.6.10",
         "autoprefixer": "10.4.14",
+        "copy-webpack-plugin": "^12.0.2",
         "css-loader": "6.7.3",
         "cssnano": "5.1.13",
         "html-loader": "4.2.0",
